added first chapter bacterial eval

--- a/data/TMT_data/01_data_preparation.ipynb
+++ b/data/TMT_data/01_data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -11,14 +11,36 @@
    "outputs": [],
    "source": [
     "library(tidyverse)\n",
-    "library(UpSetR)\n",
-    "\n",
     "source(\"../../evaluation_utils/preprocessing_MQ/preprocessing_report.R\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Path and meta"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# REVIEWED\n",
+    "data_path = '/home/yuliya/repos/cosybio/FedProt/data/TMT_data/raw_reviewed_MQ_report/'\n",
+    "\n",
+    "# NOT REVIEWED\n",
+    "# data_path = '/home/yuliya/repos/cosybio/FedProt/data/TMT_data/raw_MaxQuant_reports/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -173,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -184,21 +206,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processed data count: 500 \n",
-      "Counts data count: 500 \n",
-      "Processed data count: 530 \n",
-      "Counts data count: 530 \n",
-      "Processed data count: 456 \n",
-      "Counts data count: 456 \n"
+      "Processed data count: 491 \n",
+      "Counts data count: 491 \n",
+      "Processed data count: 516 \n",
+      "Counts data count: 516 \n",
+      "Processed data count: 438 \n",
+      "Counts data count: 438 \n"
      ]
     }
    ],
    "source": [
     "# List of input files\n",
     "list_of_inputs <- list(\n",
-    "    \"Center1\" = \"/home/yuliya/repos/cosybio/FedProt/data/TMT_data/raw_MaxQuant_reports/proteinGroups_center1.txt\",\n",
-    "    \"Center2\" = \"/home/yuliya/repos/cosybio/FedProt/data/TMT_data/raw_MaxQuant_reports/proteinGroups_center2.txt\",\n",
-    "    \"Center3\" = \"/home/yuliya/repos/cosybio/FedProt/data/TMT_data/raw_MaxQuant_reports/proteinGroups_center3.txt\"\n",
+    "    \"Center1\" = paste0(data_path, \"Center1/proteinGroups.txt\"),\n",
+    "    \"Center2\" = paste0(data_path, \"Center2/proteinGroups.txt\"),\n",
+    "    \"Center3\" = paste0(data_path, \"Center3/proteinGroups.txt\")\n",
     ")\n",
     "\n",
     "# Initialize empty lists to store combined data\n",
@@ -238,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -303,10 +325,10 @@
     "    filter(Center == center) %>%\n",
     "    write.table(paste0(genes_output_path, center, \"/metadata.tsv\"), sep = \"\\t\", quote = FALSE, row.names = TRUE)\n",
     "\n",
-    "  if(center == 'Center2'){\n",
-    "    write.table(genes_intensities, \"/home/yuliya/repos/cosybio/FedProt/data/TMT_data/balanced_data/Check_center_2/intensities_Gene.tsv\", sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
-    "    write.table(counts_df, \"/home/yuliya/repos/cosybio/FedProt/data/TMT_data/balanced_data/Check_center_2/counts_Gene.tsv\", sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
-    "  }\n",
+    "  # if(center == 'Center2'){\n",
+    "  #   write.table(genes_intensities, \"/home/yuliya/repos/cosybio/FedProt/data/TMT_data/balanced_data/Check_center_2/intensities_Gene.tsv\", sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
+    "  #   write.table(counts_df, \"/home/yuliya/repos/cosybio/FedProt/data/TMT_data/balanced_data/Check_center_2/counts_Gene.tsv\", sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
+    "  # }\n",
     "}"
    ]
   },
@@ -319,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -355,13 +377,13 @@
     "    filter(Center == center) %>%\n",
     "    write.table(paste0(pg_output_path, center, \"/metadata.tsv\"), sep = \"\\t\", quote = FALSE, row.names = TRUE)\n",
     "\n",
-    "  if(center == 'Center2'){\n",
-    "    write.table(genes_intensities, \"/home/yuliya/repos/cosybio/FedProt/data/TMT_data/balanced_data/Check_center_2/intensities_PG.tsv\", sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
-    "    write.table(counts_df, \"/home/yuliya/repos/cosybio/FedProt/data/TMT_data/balanced_data/Check_center_2/counts_PG.tsv\", sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
-    "    metadata %>%\n",
-    "      filter(Center == center) %>%\n",
-    "      write.table(\"/home/yuliya/repos/cosybio/FedProt/data/TMT_data/balanced_data/Check_center_2/metadata.tsv\", sep = \"\\t\", quote = FALSE, row.names = TRUE)\n",
-    "  }\n",
+    "  # if(center == 'Center2'){\n",
+    "  #   write.table(genes_intensities, \"/home/yuliya/repos/cosybio/FedProt/data/TMT_data/balanced_data/Check_center_2/intensities_PG.tsv\", sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
+    "  #   write.table(counts_df, \"/home/yuliya/repos/cosybio/FedProt/data/TMT_data/balanced_data/Check_center_2/counts_PG.tsv\", sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
+    "  #   metadata %>%\n",
+    "  #     filter(Center == center) %>%\n",
+    "  #     write.table(\"/home/yuliya/repos/cosybio/FedProt/data/TMT_data/balanced_data/Check_center_2/metadata.tsv\", sep = \"\\t\", quote = FALSE, row.names = TRUE)\n",
+    "  # }\n",
     "}"
    ]
   },
@@ -381,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -392,12 +414,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processed data count: 5958 \n",
-      "Processed data count: 5281 \n",
-      "Processed data count: 6303 \n",
-      "Processed data count: 5700 \n",
-      "Processed data count: 5528 \n",
-      "Processed data count: 4978 \n"
+      "Processed data count: 5987 \n",
+      "Processed data count: 6360 \n",
+      "Processed data count: 5517 \n"
      ]
     }
    ],
@@ -407,9 +426,9 @@
     "\n",
     "\n",
     "list_of_outputs <- list(\n",
-    "    \"Center1\" = \"/home/yuliya/repos/cosybio/FedProt/data/TMT_data/raw_MaxQuant_reports/Center1/peptides.txt\",\n",
-    "    \"Center2\" = \"/home/yuliya/repos/cosybio/FedProt/data/TMT_data/raw_MaxQuant_reports/Center2/peptides.txt\",\n",
-    "    \"Center3\" = \"/home/yuliya/repos/cosybio/FedProt/data/TMT_data/raw_MaxQuant_reports/Center3/peptides.txt\"\n",
+    "    \"Center1\" = paste0(data_path, \"Center1/peptides.txt\"),\n",
+    "    \"Center2\" = paste0(data_path, \"Center2/peptides.txt\"),\n",
+    "    \"Center3\" = paste0(data_path, \"Center3/peptides.txt\")\n",
     ")\n",
     "\n",
     "combined_pg_intensities <- list()\n",
@@ -420,17 +439,17 @@
     "        filter(Center == center)\n",
     "\n",
     "    not_filtered <- preprocess_data_mxout(list_of_outputs[[center]], center_metadata, data_type = 'peptide', do_filter = FALSE)\n",
-    "    results_list <- preprocess_data_mxout(list_of_outputs[[center]], center_metadata, data_type = 'peptide', do_filter = TRUE)\n",
+    "    # results_list <- preprocess_data_mxout(list_of_outputs[[center]], center_metadata, data_type = 'peptide', do_filter = TRUE)\n",
     "\n",
-    "    pg_intensities <- results_list %>%\n",
-    "        rowwise() %>% # Apply the following operations to each row individually\n",
-    "        mutate(Gene.names = map_chr(strsplit(Gene.names, \";\"), ~paste(sort(.x), collapse = \";\"))) %>%\n",
-    "        mutate(Proteins = map_chr(strsplit(Proteins, \";\"), ~paste(sort(.x), collapse = \";\")))\n",
-    "    pg_intensities <- pg_intensities[, c(\"Sequence\", \"Proteins\", \"Gene.names\", rownames(center_metadata))]\n",
-    "    colnames(pg_intensities) <- c(\"Sequence\", \"Proteins\", \"Gene.names\", center_metadata$Quantitative.column.name)\n",
+    "    # pg_intensities <- results_list %>%\n",
+    "    #     rowwise() %>% # Apply the following operations to each row individually\n",
+    "    #     mutate(Gene.names = map_chr(strsplit(Gene.names, \";\"), ~paste(sort(.x), collapse = \";\"))) %>%\n",
+    "    #     mutate(Proteins = map_chr(strsplit(Proteins, \";\"), ~paste(sort(.x), collapse = \";\")))\n",
+    "    # pg_intensities <- pg_intensities[, c(\"Sequence\", \"Proteins\", \"Gene.names\", rownames(center_metadata))]\n",
+    "    # colnames(pg_intensities) <- c(\"Sequence\", \"Proteins\", \"Gene.names\", center_metadata$Quantitative.column.name)\n",
     "\n",
-    "    write.table(pg_intensities, paste0(genes_output_path, center, \"/aggregated.tsv\"), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
-    "    write.table(pg_intensities, paste0(pg_output_path, center, \"/aggregated.tsv\"), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
+    "    # write.table(pg_intensities, paste0(genes_output_path, center, \"/aggregated.tsv\"), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
+    "    # write.table(pg_intensities, paste0(pg_output_path, center, \"/aggregated.tsv\"), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
     "\n",
     "    pg_intensities_NF <- not_filtered %>%\n",
     "        rowwise() %>% # Apply the following operations to each row individually\n",
@@ -441,6 +460,8 @@
     "\n",
     "    write.table(pg_intensities_NF, paste0(genes_output_path, center, \"/aggregated_NF.tsv\"), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
     "    write.table(pg_intensities_NF, paste0(pg_output_path, center, \"/aggregated_NF.tsv\"), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
+    "\n",
+    "    # write.table(not_filtered, paste0(\"/home/yuliya/repos/cosybio/FedProt/data/TMT_data/mapping_filtering_check/custom_NR/\", center, \"_aggregated_NF.tsv\"), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
     "\n",
     "    # write metadata\n",
     "    metadata %>%\n",
