--- a/evaluation/bacterial/01_run_deqms.ipynb
+++ b/evaluation/bacterial/01_run_deqms.ipynb
@@ -2,17 +2,101 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: ggplot2\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "“package ‘ggplot2’ was built under R version 4.2.3”\n",
+      "Loading required package: matrixStats\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘matrixStats’ was built under R version 4.2.3”\n",
+      "Loading required package: limma\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘tidyverse’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘tibble’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘tidyr’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘readr’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘purrr’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘dplyr’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘stringr’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘forcats’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘lubridate’ was built under R version 4.2.2”\n",
+      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────── tidyverse 2.0.0 ──\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.2     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.1     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.0\n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mcount()\u001b[39m  masks \u001b[34mmatrixStats\u001b[39m::count()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n",
+      "Warning message:\n",
+      "“package ‘ggrepel’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘data.table’ was built under R version 4.2.2”\n",
+      "\n",
+      "Attaching package: ‘data.table’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:lubridate’:\n",
+      "\n",
+      "    hour, isoweek, mday, minute, month, quarter, second, wday, week,\n",
+      "    yday, year\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:dplyr’:\n",
+      "\n",
+      "    between, first, last\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:purrr’:\n",
+      "\n",
+      "    transpose\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘jsonlite’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:purrr’:\n",
+      "\n",
+      "    flatten\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "library(tidyverse)\n",
     "library(DEqMS)\n",
     "library(patchwork)\n",
+    "library(tidyverse)\n",
     "\n",
     "source(\"../../evaluation_utils/evaluation/DE_analysis.R\")\n",
     "source(\"../../evaluation_utils/plots/DE_plots.R\")\n",
@@ -30,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -133,7 +217,7 @@
     "\n",
     "    # run DE\n",
     "    design <- make_design(batch_info, 'condition')\n",
-    "    contrasts <- makeContrasts(Pyr - Glu, levels = colnames(design))\n",
+    "    contrasts <- makeContrasts(Glu-Pyr, levels = colnames(design))\n",
     "    de_results <- run_DE(intensities, counts, design, contrasts)\n",
     "    de_results <- de_results %>% rownames_to_column('Protein')\n",
     "    write.table(de_results, file = paste0(output_path, name, '_res_FULL.tsv'), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
@@ -169,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -209,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -256,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -275,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -301,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -388,6 +472,9 @@
     "  cat('\\tNumber of samples: ', ncol(central_intensities), '\\n')\n",
     "\n",
     "  central_intensities <- central_intensities %>% column_to_rownames('rowname')\n",
+    "  # save for RBE \n",
+    "  # write.table(central_intensities, file = paste0('/home/yuliya/repos/other/removeBatch/evaluation_data/proteomics/before/', dataset, '_central_intensities.tsv'), sep = \"\\t\", quote = FALSE, row.names = TRUE)\n",
+    "  # write.table(central_batch_info, file = paste0('/home/yuliya/repos/other/removeBatch/evaluation_data/proteomics/before/', dataset, '_central_batch_info.tsv'), sep = \"\\t\", quote = FALSE, row.names = FALSE) \n",
     "  central_counts <- central_counts %>% column_to_rownames('rowname')\n",
     "  central_intensities <- central_intensities[, central_batch_info$file]\n",
     "    \n",
@@ -401,7 +488,7 @@
     "\n",
     "  # run DE analysis\n",
     "  design <- make_design(central_batch_info, 'condition', 'lab')\n",
-    "  contrasts <- makeContrasts(Pyr - Glu, levels = colnames(design))\n",
+    "  contrasts <- makeContrasts(Glu-Pyr, levels = colnames(design))\n",
     "  de_results <- run_DE(central_intensities, central_counts, design, contrasts)\n",
     "  de_results <- de_results %>% rownames_to_column('Protein')\n",
     "  write.table(de_results, file = paste0('/home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/', dataset, '/results/central_res.tsv'), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
