added bacterial dataset new version (for tmt+ draft)

--- a/data/bacterial_data/01_data_preparation.ipynb
+++ b/data/bacterial_data/01_data_preparation.ipynb
@@ -639,7 +639,7 @@
    "id": "962bf7b1",
    "metadata": {},
    "source": [
-    "# Create imbalanced datasets"
+    "# Create imbalanced datasets --- Now in new file"
    ]
   },
   {
