Updated FedProt for TMT in silico ref data

--- a/evaluation/bacterial/04_evaluation.ipynb
+++ b/evaluation/bacterial/04_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "P00363     0.597490     -0.114420  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -327,20 +327,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Calculating RMSE. Using p-vals - log-transformed.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "Calculating RMSE. Using p-vals - log-transformed.\n",
       "RMSE and NRMSE computed for all genes from pv_ columns.\n",
       "Calculating corrs. Using p-vals - log-transformed.\n",
       "Correlations computed for all genes from pv_ columns.\n",
@@ -356,34 +350,20 @@
      "text": [
       "Dataset: balanced\n",
       "\tP-value basic stats:\n",
-      "              MeanDiff       MaxDiff         r         ρ          RMSE  \\\n",
-      "FedProt   6.727534e-13  4.931167e-12  1.000000  1.000000  9.414345e-13   \n",
-      "Fisher    4.793878e+00  3.131435e+01  0.980620  0.956843  6.497936e+00   \n",
-      "Stouffer  3.998185e+00  2.699362e+01  0.988331  0.965187  5.626049e+00   \n",
-      "REM       1.659226e+01  2.578517e+02  0.764905  0.905286  4.127313e+01   \n",
-      "RankProd  1.668376e+01  1.006374e+02  0.771430  0.876273  2.501213e+01   \n",
-      "\n",
-      "                 NRMSE  \n",
-      "FedProt   2.400579e-15  \n",
-      "Fisher    1.656919e-02  \n",
-      "Stouffer  1.434595e-02  \n",
-      "REM       1.052430e-01  \n",
-      "RankProd  6.377883e-02  \n",
+      "          MeanDiff  MaxDiff      r      ρ    RMSE  NRMSE\n",
+      "FedProt      0.000    0.000  1.000  1.000   0.000  0.000\n",
+      "Fisher       4.794   31.314  0.981  0.957   6.498  0.017\n",
+      "Stouffer     3.998   26.994  0.988  0.965   5.626  0.014\n",
+      "REM         16.592  257.852  0.765  0.905  41.273  0.105\n",
+      "RankProd    16.684  100.637  0.771  0.876  25.012  0.064\n",
       "Dataset: imbalanced\n",
       "\tP-value basic stats:\n",
-      "              MeanDiff       MaxDiff         r         ρ          RMSE  \\\n",
-      "FedProt   4.268203e-13  4.192202e-12  1.000000  1.000000  6.228942e-13   \n",
-      "Fisher    3.536972e+00  2.154460e+01  0.974878  0.945978  4.835147e+00   \n",
-      "Stouffer  2.582266e+00  2.094675e+01  0.983923  0.951580  3.747985e+00   \n",
-      "REM       1.442783e+01  2.643700e+02  0.749197  0.897108  4.036446e+01   \n",
-      "RankProd  1.059538e+01  6.285822e+01  0.770382  0.864170  1.594705e+01   \n",
-      "\n",
-      "                 NRMSE  \n",
-      "FedProt   3.656557e-15  \n",
-      "Fisher    2.838362e-02  \n",
-      "Stouffer  2.200169e-02  \n",
-      "REM       2.369503e-01  \n",
-      "RankProd  9.361349e-02  \n"
+      "          MeanDiff  MaxDiff      r      ρ    RMSE  NRMSE\n",
+      "FedProt      0.000    0.000  1.000  1.000   0.000  0.000\n",
+      "Fisher       3.537   21.545  0.975  0.946   4.835  0.028\n",
+      "Stouffer     2.582   20.947  0.984  0.952   3.748  0.022\n",
+      "REM         14.428  264.370  0.749  0.897  40.364  0.237\n",
+      "RankProd    10.595   62.858  0.770  0.864  15.947  0.094\n"
      ]
     }
    ],
@@ -402,7 +382,7 @@
     "    pval_basic_stats = fp_eval.calc_stats(\n",
     "        transfomed_dataset, \n",
     "        lfc_thr=0.58, adj_pval_thr=0.01,\n",
-    "        stats=[\"MeanDiff\", \"MaxDiff\", \"r\", \"ρ\", \"RMSE\", \"NRMSE\"],\n",
+    "        stats=[ \"MeanDiff\", \"MaxDiff\", \"r\", \"ρ\", \"RMSE\", \"NRMSE\"],\n",
     "        methods=[\"FedProt\", \"Fisher\", \"Stouffer\", \"REM\", \"RankProd\"],\n",
     "        column_name=\"pv_\",\n",
     "        top_genes=-1\n",
@@ -413,7 +393,8 @@
     "    \n",
     "    print(f'Dataset: {dataset}')\n",
     "    print(\"\\tP-value basic stats:\")\n",
-    "    print(pval_basic_stats)        "
+    "    # print round values to 3 digits\n",
+    "    print(pval_basic_stats.round(3))     "
    ]
   },
   {
