--- a/evaluation/simulated/02_aggregation_results.ipynb
+++ b/evaluation/simulated/02_aggregation_results.ipynb
@@ -1024,6 +1024,8 @@
     "    summarized_stats_cor_error[\"RMSE\"] = RMSE_df.aggregate([\"mean\", \"std\"]).T\n",
     "    summarized_stats_cor_error[\"NRMSE\"] = NRMSE_df.aggregate([\"mean\", \"std\"]).T\n",
     "\n",
+    "    print(summarized_stats_cor_error[\"RMSE\", \"NRMSE\"].round(3))\n",
+    "\n",
     "    # Create summary stats for logFC (using df.aggregate([\"mean\", \"std\"]) and adding two values for each method)\n",
     "    summarized_stats_differences_LF[\"MinDiff\"] = mindiffLF_df.aggregate([\"mean\", \"std\"]).T\n",
     "    summarized_stats_differences_LF[\"MeanDiff\"] = meandiffLF_df.aggregate([\"mean\", \"std\"]).T\n",
@@ -1049,6 +1051,34 @@
     "    summarized_stats_differences_LF.to_csv(f\"{workdir}/summarized_stats_differences_LF.csv\", index=True, float_format=\"%.2E\")\n",
     "    summarized_stats_cor_error_LF.to_csv(f\"{workdir}/summarized_stats_cor_error_LF.csv\", index=True, float_format=\"%.2E\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
