--- a/data/TMT_data/00_raw_data_preprocessing.ipynb
+++ b/data/TMT_data/00_raw_data_preprocessing.ipynb
@@ -2,50 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message:\n",
-      "“package ‘tidyverse’ was built under R version 4.2.2”\n",
-      "Warning message:\n",
-      "“package ‘ggplot2’ was built under R version 4.2.3”\n",
-      "Warning message:\n",
-      "“package ‘tibble’ was built under R version 4.2.3”\n",
-      "Warning message:\n",
-      "“package ‘tidyr’ was built under R version 4.2.2”\n",
-      "Warning message:\n",
-      "“package ‘readr’ was built under R version 4.2.2”\n",
-      "Warning message:\n",
-      "“package ‘purrr’ was built under R version 4.2.3”\n",
-      "Warning message:\n",
-      "“package ‘dplyr’ was built under R version 4.2.3”\n",
-      "Warning message:\n",
-      "“package ‘stringr’ was built under R version 4.2.3”\n",
-      "Warning message:\n",
-      "“package ‘forcats’ was built under R version 4.2.2”\n",
-      "Warning message:\n",
-      "“package ‘lubridate’ was built under R version 4.2.2”\n",
-      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────── tidyverse 2.0.0 ──\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2  \u001b[39m 3.4.2     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.2     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.1     \n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(tidyverse)\n",
     "source(\"../../evaluation_utils/preprocessing_raw/preprocessing_report.R\")"
@@ -60,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -77,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -226,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -293,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -321,6 +284,10 @@
     "    # sort!\n",
     "    mutate(Majority.protein.IDs = map_chr(strsplit(Majority.protein.IDs, \";\"), ~paste(sort(.x), collapse = \";\")))\n",
     "\n",
+    "  # replace 0 with NA\n",
+    "  intensities <- intensities %>%\n",
+    "    mutate_all(~replace(., . == 0, NA))\n",
+    "\n",
     "  # Write  intensities to a file\n",
     "  write.table(intensities, paste0(sub_dir, \"/pg_intensities.tsv\"), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
     "    \n",
@@ -328,16 +295,32 @@
     "  counts_df <- combined_counts[[center]] %>%\n",
     "    select(-c(Gene.names, Peptide.IDs, Peptide.is.razor)) %>%\n",
     "    rowwise() %>% # Apply the following operations to each row individually\n",
-    "    mutate(Majority.protein.IDs = map_chr(strsplit(Majority.protein.IDs, \";\"), ~paste(sort(.x), collapse = \";\")))\n",
+    "    mutate(Majority.protein.IDs = map_chr(strsplit(Majority.protein.IDs, \";\"), ~paste(sort(.x), collapse = \";\"))) %>%\n",
+    "    rename(\"counts\" = \"Razor...unique.peptides\")\n",
     "\n",
     "  # Write counts to a file\n",
     "  write.table(counts_df, paste0(sub_dir, \"/pg_counts.tsv\"), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
     "\n",
     "  # Write metadata to a file\n",
     "  metadata %>%\n",
-    "    rownames_to_column(\"filename\") %>%\n",
+    "    # rownames_to_column(\"filename\") %>%\n",
     "    filter(Center == center) %>%\n",
     "    write.table(paste0(sub_dir, \"/metadata.tsv\"), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
+    "\n",
+    "\n",
+    "  # write a design file\n",
+    "  for_dummy <- metadata %>%\n",
+    "    filter(Center == center) %>% \n",
+    "    mutate(Group = ifelse(Group == \"Common Reference\", \"CommonReference\", Group))\n",
+    "  rownames(for_dummy) <- for_dummy$Quantitative.column.name\n",
+    "  dummy_df <- model.matrix(~0+Group, for_dummy)\n",
+    "  colnames(dummy_df) <- gsub(\"Group\", \"\", colnames(dummy_df))\n",
+    "\n",
+    "  for_dummy <- for_dummy %>% \n",
+    "      rownames_to_column(\"filename\") %>%\n",
+    "      select(-c(Quantitative.column.name, Reporter.ion, Group, Patient)) %>% \n",
+    "      cbind(dummy_df)\n",
+    "  write.table(for_dummy, paste0(sub_dir, \"/design.tsv\"), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
     "\n",
     "}\n",
     "\n",
