--- a/data/TMT_data/00_raw_data_preprocessing.ipynb
+++ b/data/TMT_data/00_raw_data_preprocessing.ipynb
@@ -2,13 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "“package ‘tidyverse’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘ggplot2’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘tibble’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘tidyr’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘readr’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘purrr’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘dplyr’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘stringr’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘forcats’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘lubridate’ was built under R version 4.2.2”\n",
+      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────── tidyverse 2.0.0 ──\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2  \u001b[39m 3.4.2     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.2     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.1     \n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "source(\"../../evaluation_utils/preprocessing_raw/preprocessing_report.R\")"
@@ -23,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -40,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -189,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -256,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -328,6 +365,149 @@
     "metadata %>%\n",
     "  rownames_to_column(\"filename\") %>%\n",
     "  write.table(paste0(pg_output_path, \"metadata.tsv\"), sep = \"\\t\", quote = FALSE, row.names = FALSE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Make data imbalanced\n",
+    "\n",
+    "-- references were removed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "sample_based_on_rules <- function(center, pool, metadata) {\n",
+    "  set.seed(42)  # Set seed for reproducibility\n",
+    "  \n",
+    "  if (center == \"Center1\") {\n",
+    "    if (pool == \"Pool1\" || pool == \"Pool2\") {\n",
+    "      heathy_samples <- rownames(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ]), 3), ])\n",
+    "      FSGS_samples <- rownames(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ]), 5), ])\n",
+    "    }\n",
+    "  } else if (center == \"Center2\") {\n",
+    "    if (pool == \"Pool3\") {\n",
+    "      heathy_samples <- rownames(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ]), 3), ])\n",
+    "      FSGS_samples <- rownames(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ]), 4), ])\n",
+    "    } else if (pool == \"Pool5\") {\n",
+    "      heathy_samples <- rownames(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ]), 3), ])\n",
+    "      FSGS_samples <- rownames(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ]), 3), ])\n",
+    "    }\n",
+    "  } else if (center == \"Center3\") {\n",
+    "    if (pool == \"Pool4\") {\n",
+    "      heathy_samples <- rownames(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ]), 4), ])\n",
+    "      FSGS_samples <- rownames(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ]), 2), ])\n",
+    "    } else if (pool == \"Pool6\") {\n",
+    "      heathy_samples <- rownames(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'heathy' & metadata$Pool == pool, ]), 4), ])\n",
+    "      FSGS_samples <- rownames(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ][sample(1:nrow(metadata[metadata$Group == 'FSGS' & metadata$Pool == pool, ]), 3), ])\n",
+    "    }\n",
+    "  } else {\n",
+    "    stop(\"Invalid center or pool\")\n",
+    "  }\n",
+    "  \n",
+    "  return(c(heathy_samples, FSGS_samples))\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of imbalanced_meta:  42 7 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# output\n",
+    "pg_output_path <- \"/home/yuliya/repos/cosybio/FedProt/data/TMT_data/01_smaller_lib_balanced_PG_MajorPG/\"\n",
+    "output_path <- \"/home/yuliya/repos/cosybio/FedProt/data/TMT_data/01_smaller_lib_imbalanced_PG_MajorPG/\"\n",
+    "\n",
+    "imbalanced_meta <- NULL\n",
+    "\n",
+    "# This loop iterates over a list of centers and performs data preparation tasks for each center.\n",
+    "for(center in list(\"Center1\", \"Center2\", \"Center3\")) {\n",
+    "  # create sub dir for each center\n",
+    "  sub_dir <- paste0(output_path, center)\n",
+    "  if(!dir.exists(sub_dir)) {\n",
+    "    dir.create(sub_dir, recursive = TRUE)\n",
+    "  }\n",
+    "\n",
+    "  # read full metadata\n",
+    "  metadata <- read.table(\"/home/yuliya/repos/cosybio/FedProt/data/TMT_data/01_smaller_lib_balanced_PG_MajorPG/metadata.tsv\",\n",
+    "                         header = TRUE, sep = \"\\t\", stringsAsFactors = FALSE) %>%\n",
+    "    filter(Center == center)\n",
+    "  rownames(metadata) <- metadata$Quantitative.column.name\n",
+    "\n",
+    "  # select random samples according to the rule:\n",
+    "  keep_samples <- c()\n",
+    "\n",
+    "  for(pool in unique(metadata$Pool)) {\n",
+    "    selected_samples <- c(keep_samples, sample_based_on_rules(center, pool, metadata))\n",
+    "    keep_samples <- c(keep_samples, selected_samples)\n",
+    "  }\n",
+    "  metadata <- metadata[metadata$Quantitative.column.name %in% keep_samples, ]\n",
+    "\n",
+    "  # read intensities from prev step for the center and filter them\n",
+    "  intensities <- read.table(paste0(pg_output_path, center, \"/pg_intensities.tsv\"), header = TRUE, sep = \"\\t\", stringsAsFactors = FALSE)\n",
+    "  rownames(intensities) <- intensities$Majority.protein.IDs\n",
+    "  intensities <- intensities[,colnames(intensities) %in% keep_samples] %>%\n",
+    "    rownames_to_column(\"Majority.protein.IDs\")\n",
+    "\n",
+    "  # read counts from prev step for the center and filter them\n",
+    "  counts <- read.table(paste0(pg_output_path, center, \"/pg_counts.tsv\"), header = TRUE, sep = \"\\t\", stringsAsFactors = FALSE)\n",
+    "  \n",
+    "\n",
+    "  # write intensities to a file\n",
+    "  write.table(intensities, paste0(sub_dir, \"/pg_intensities.tsv\"), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
+    "  # write counts to a file\n",
+    "  write.table(counts, paste0(sub_dir, \"/pg_counts.tsv\"), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
+    "  # write metadata to a file\n",
+    "  write.table(metadata, paste0(sub_dir, \"/metadata.tsv\"), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
+    "\n",
+    "\n",
+    "  # create design df\n",
+    "  for_dummy <- metadata\n",
+    "  rownames(for_dummy) <- for_dummy$Quantitative.column.name\n",
+    "  dummy_df <- model.matrix(~0+Group, for_dummy)\n",
+    "  colnames(dummy_df) <- gsub(\"Group\", \"\", colnames(dummy_df))\n",
+    "\n",
+    "  # # write design to a file\n",
+    "  for_dummy <- for_dummy %>% \n",
+    "    select(-c(filename, Quantitative.column.name, Reporter.ion, Group, Patient)) %>% \n",
+    "    rownames_to_column(\"filename\") %>%\n",
+    "    cbind(dummy_df)\n",
+    "  write.table(for_dummy, paste0(sub_dir, \"/design.tsv\"), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
+    "  \n",
+    "\n",
+    "  # add metadata to the imbalanced_meta\n",
+    "  if(is.null(imbalanced_meta)) {\n",
+    "    imbalanced_meta <- metadata\n",
+    "  } else {\n",
+    "    imbalanced_meta <- rbind(imbalanced_meta, metadata)\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "cat(\"Shape of imbalanced_meta: \", dim(imbalanced_meta), \"\\n\")\n",
+    "#write in to a file\n",
+    "write.table(imbalanced_meta, paste0(output_path, \"metadata.tsv\"), sep = \"\\t\", quote = FALSE, row.names = FALSE)"
    ]
   },
   {
