--- a/evaluation/simulated/01_de_analysis.ipynb
+++ b/evaluation/simulated/01_de_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -14,7 +14,95 @@
      "output_type": "stream",
      "text": [
       "Warning message:\n",
-      "“package ‘ggrepel’ was built under R version 4.2.2”\n"
+      "“package ‘reshape2’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘gridExtra’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘tidyverse’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘ggplot2’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘tibble’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘tidyr’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘readr’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘purrr’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘dplyr’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘stringr’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘forcats’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘lubridate’ was built under R version 4.2.2”\n",
+      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────── tidyverse 2.0.0 ──\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2  \u001b[39m 3.4.2     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.2     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.1     \n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mcombine()\u001b[39m masks \u001b[34mgridExtra\u001b[39m::combine()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m  masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m     masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n",
+      "Warning message:\n",
+      "“package ‘data.table’ was built under R version 4.2.2”\n",
+      "\n",
+      "Attaching package: ‘data.table’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:lubridate’:\n",
+      "\n",
+      "    hour, isoweek, mday, minute, month, quarter, second, wday, week,\n",
+      "    yday, year\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:dplyr’:\n",
+      "\n",
+      "    between, first, last\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:purrr’:\n",
+      "\n",
+      "    transpose\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:reshape2’:\n",
+      "\n",
+      "    dcast, melt\n",
+      "\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘foreach’ was built under R version 4.2.3”\n",
+      "\n",
+      "Attaching package: ‘foreach’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:purrr’:\n",
+      "\n",
+      "    accumulate, when\n",
+      "\n",
+      "\n",
+      "Loading required package: matrixStats\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘matrixStats’ was built under R version 4.2.3”\n",
+      "\n",
+      "Attaching package: ‘matrixStats’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:dplyr’:\n",
+      "\n",
+      "    count\n",
+      "\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘ggrepel’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘invgamma’ was built under R version 4.2.3”\n"
      ]
     }
    ],
@@ -40,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -57,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -2335,7 +2423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "r"
