filtered one pept conts

--- a/evaluation/simulated/02_aggregation_results.ipynb
+++ b/evaluation/simulated/02_aggregation_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -903,6 +903,7 @@
     "    FP_df = pd.DataFrame(columns=[\"FedProt\", \"Fisher\", \"Stouffer\", \"REM\", \"RankProd\"])\n",
     "    FN_df = pd.DataFrame(columns=[\"FedProt\", \"Fisher\", \"Stouffer\", \"REM\", \"RankProd\"])\n",
     "    F1_df = pd.DataFrame(columns=[\"FedProt\", \"Fisher\", \"Stouffer\", \"REM\", \"RankProd\"])\n",
+    "    MCC_df = pd.DataFrame(columns=[\"FedProt\", \"Fisher\", \"Stouffer\", \"REM\", \"RankProd\"])\n",
     "\n",
     "    mindiff_df = pd.DataFrame(columns=[\"FedProt\", \"Fisher\", \"Stouffer\", \"REM\", \"RankProd\"])\n",
     "    maxdiff_df = pd.DataFrame(columns=[\"FedProt\", \"Fisher\", \"Stouffer\", \"REM\", \"RankProd\"])\n",
@@ -937,7 +938,7 @@
     "        pval_stats = fp_eval.calc_stats(\n",
     "            log_df, \n",
     "            lfc_thr=lfc_thr, adj_pval_thr=pval_thr,\n",
-    "            stats=[\"FP\", \"FN\", \"F1\", \n",
+    "            stats=[\"FP\", \"FN\", \"F1\", \"MCC\",\n",
     "                   \"MinDiff\", \"MeanDiff\", \"MaxDiff\", \n",
     "                   \"r\", \"ρ\", \"RMSE\", \"NRMSE\"],\n",
     "            methods=[\"FedProt\", \"Fisher\", \"Stouffer\", \"REM\", \"RankProd\"],\n",
@@ -948,6 +949,7 @@
     "        FP_df.loc[i] = pval_stats[\"FP\"].T\n",
     "        FN_df.loc[i] = pval_stats[\"FN\"].T\n",
     "        F1_df.loc[i] = pval_stats[\"F1\"].T\n",
+    "        MCC_df.loc[i] = pval_stats[\"MCC\"].T\n",
     "        mindiff_df.loc[i] = pval_stats[\"MinDiff\"].T\n",
     "        meandiff_df.loc[i] = pval_stats[\"MeanDiff\"].T\n",
     "        maxdiff_df.loc[i] = pval_stats[\"MaxDiff\"].T\n",
@@ -992,6 +994,7 @@
     "    FP_df.to_csv(f\"{workdir}/FP.csv\", index=True)\n",
     "    FN_df.to_csv(f\"{workdir}/FN.csv\", index=True)\n",
     "    F1_df.to_csv(f\"{workdir}/F1.csv\", index=True)\n",
+    "    MCC_df.to_csv(f\"{workdir}/MCC.csv\", index=True)\n",
     "    mindiff_df.to_csv(f\"{workdir}/mindiff.csv\", index=True)\n",
     "    meandiff_df.to_csv(f\"{workdir}/meandiff.csv\", index=True)\n",
     "    maxdiff_df.to_csv(f\"{workdir}/maxdiff.csv\", index=True)\n",
@@ -1014,6 +1017,7 @@
     "    summarized_stats_F1[\"FP\"] = FP_df.aggregate([\"mean\", \"std\"]).T\n",
     "    summarized_stats_F1[\"FN\"] = FN_df.aggregate([\"mean\", \"std\"]).T\n",
     "    summarized_stats_F1[\"F1\"] = F1_df.aggregate([\"mean\", \"std\"]).T\n",
+    "    summarized_stats_F1[\"MCC\"] = MCC_df.aggregate([\"mean\", \"std\"]).T\n",
     "\n",
     "    summarized_stats_differences[\"MinDiff\"] = mindiff_df.aggregate([\"mean\", \"std\"]).T\n",
     "    summarized_stats_differences[\"MeanDiff\"] = meandiff_df.aggregate([\"mean\", \"std\"]).T\n",
