--- a/evaluation/bacterial/01_run_deqms.ipynb
+++ b/evaluation/bacterial/01_run_deqms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -25,12 +25,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Central run"
+    "# Separate run for meta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -45,7 +45,246 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Dataset:  balanced \n",
+      "\n",
+      "Lab:  lab_A \n",
+      "Filtering by condition - two not-NA per condition\n",
+      "\tBefore filtering: 2549 24 \n",
+      "\tAfter filtering: 2511 24 \n",
+      "Rows after all filters: 2511 \n",
+      "\n",
+      "Lab:  lab_B \n",
+      "Filtering by condition - two not-NA per condition\n",
+      "\tBefore filtering: 2846 23 \n",
+      "\tAfter filtering: 2819 23 \n",
+      "Rows after all filters: 2819 \n",
+      "\n",
+      "Lab:  lab_C \n",
+      "Filtering by condition - two not-NA per condition\n",
+      "\tBefore filtering: 2820 23 \n",
+      "\tAfter filtering: 2755 23 \n",
+      "Rows after all filters: 2755 \n",
+      "\n",
+      "Lab:  lab_D \n",
+      "Filtering by condition - two not-NA per condition\n",
+      "\tBefore filtering: 2813 24 \n",
+      "\tAfter filtering: 2776 24 \n",
+      "Rows after all filters: 2776 \n",
+      "\n",
+      "Lab:  lab_E \n",
+      "Filtering by condition - two not-NA per condition\n",
+      "\tBefore filtering: 2401 24 \n",
+      "\tAfter filtering: 2354 24 \n",
+      "Rows after all filters: 2354 \n",
+      "\n",
+      "\n",
+      "Dataset:  imbalanced \n",
+      "\n",
+      "Lab:  lab_A \n",
+      "Filtering by condition - two not-NA per condition\n",
+      "\tBefore filtering: 2549 15 \n",
+      "\tAfter filtering: 2520 15 \n",
+      "Rows after all filters: 2520 \n",
+      "\n",
+      "Lab:  lab_B \n",
+      "Filtering by condition - two not-NA per condition\n",
+      "\tBefore filtering: 2845 13 \n",
+      "\tAfter filtering: 2822 13 \n",
+      "Rows after all filters: 2822 \n",
+      "\n",
+      "Lab:  lab_C \n",
+      "Filtering by condition - two not-NA per condition\n",
+      "\tBefore filtering: 2814 14 \n",
+      "\tAfter filtering: 2745 14 \n",
+      "Rows after all filters: 2745 \n",
+      "\n",
+      "Lab:  lab_D \n",
+      "Filtering by condition - two not-NA per condition\n",
+      "\tBefore filtering: 2813 15 \n",
+      "\tAfter filtering: 2785 15 \n",
+      "Rows after all filters: 2785 \n",
+      "\n",
+      "Lab:  lab_E \n",
+      "Filtering by condition - two not-NA per condition\n",
+      "\tBefore filtering: 2401 24 \n",
+      "\tAfter filtering: 2354 24 \n",
+      "Rows after all filters: 2354 \n"
+     ]
+    }
+   ],
+   "source": [
+    "options(warn=-1)\n",
+    "datasets_list = c('balanced', 'imbalanced')\n",
+    "labs_list = c('lab_A', 'lab_B', 'lab_C', 'lab_D' , 'lab_E')\n",
+    "\n",
+    "# empty plot\n",
+    "x <- ggplot() + theme_minimal()\n",
+    "\n",
+    "for(dataset in datasets_list){\n",
+    "  plots_list = list()\n",
+    "  cat('\\n\\nDataset: ', dataset, \"\\n\")\n",
+    "\n",
+    "  path_to_reports = paste0('/home/yuliya/repos/cosybio/FedProt/data/bacterial_data/', dataset, '/')\n",
+    "  \n",
+    "  for (name in labs_list) {\n",
+    "    output_path = paste0('/home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/', dataset, '/')\n",
+    "    cat('\\nLab: ', name, \"\\n\")\n",
+    "\n",
+    "    batch_info = read_tsv(paste0(path_to_reports, name, '/metadata.tsv'), show_col_types = FALSE)\n",
+    "    intensities = read_tsv(paste0(path_to_reports, name, '/protein_groups_matrix.tsv'), show_col_types = FALSE)\n",
+    "    counts = read_tsv(paste0(path_to_reports, name, '/protein_counts.tsv'), show_col_types = FALSE)\n",
+    "\n",
+    "    intensities <- intensities %>% column_to_rownames('rowname')\n",
+    "    counts <- counts %>% column_to_rownames('rowname')\n",
+    "    intensities <- intensities[, batch_info$file]\n",
+    "\n",
+    "    intensities <- filter_by_condition(intensities, batch_info, \n",
+    "        'file', c('Glu', 'Pyr'), 'condition')\n",
+    "    \n",
+    "    filter_list_META[[dataset]][[name]] <- rownames(intensities)\n",
+    "\n",
+    "    cat(\"Rows after all filters:\", nrow(intensities), \"\\n\")\n",
+    "    intensities <- log2(intensities + 1)\n",
+    "\n",
+    "    # run DE\n",
+    "    design <- make_design(batch_info, 'condition')\n",
+    "    contrasts <- makeContrasts(Glu-Pyr, levels = colnames(design))\n",
+    "    de_results <- run_DE(intensities, counts, design, contrasts)\n",
+    "    de_results <- de_results %>% rownames_to_column('Protein')\n",
+    "    write.table(de_results, file = paste0(output_path, name, '_res_FULL.tsv'), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
+    "\n",
+    "\n",
+    "    # plot volcano plots\n",
+    "    if(name == 'lab_E'){\n",
+    "        plot_separate <- volcano_plot(\n",
+    "        de_results, paste(dataset, name, \", Glu/Pyr\"),\n",
+    "        pval_threshold = 0.01, logfc_threshold = 0.58,\n",
+    "        show_names = FALSE\n",
+    "      )\n",
+    "    } else {\n",
+    "      plot_separate <- volcano_plot(\n",
+    "        de_results, paste(dataset, name, \", Glu/Pyr\"),\n",
+    "        pval_threshold = 0.01, logfc_threshold = 0.58,\n",
+    "        show_names = FALSE, show_legend = FALSE\n",
+    "      )\n",
+    "    }\n",
+    "    plots_list[[name]] = plot_separate\n",
+    "  }\n",
+    "\n",
+    "  layout <- (plots_list[['lab_A']] | plots_list[['lab_B']] | plots_list[['lab_C']]) /\n",
+    "            (plots_list[['lab_D']] | plots_list[['lab_E']] | x)\n",
+    "  # save plot\n",
+    "  ggsave(file = paste0(output_path, \"volcano_plots.svg\"), plot = layout, width = 15, height = 8)\n",
+    "}\n",
+    "\n",
+    "\n",
+    "write_json(filter_list_META, \"/home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/filter_list_META.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Dataset:  balanced\n",
+      "\tIntersection length: 2232\n",
+      "\n",
+      "Dataset:  imbalanced\n",
+      "\tIntersection length: 2234"
+     ]
+    }
+   ],
+   "source": [
+    "meta_filter <- list()\n",
+    "\n",
+    "# prepare filter for meta-analyses\n",
+    "for(dataset in datasets_list){\n",
+    "  cat('\\n\\nDataset: ', dataset)\n",
+    "  for (name in labs_list) {\n",
+    "    if(is.null(meta_filter[[dataset]])){\n",
+    "      meta_filter[[dataset]] <- filter_list_META[[dataset]][[name]]\n",
+    "    } else {\n",
+    "      meta_filter[[dataset]] <- intersect(meta_filter[[dataset]], filter_list_META[[dataset]][[name]])\n",
+    "    }\n",
+    "  }\n",
+    "  cat(\"\\n\\tIntersection length:\",  length(meta_filter[[dataset]]))\n",
+    "  filter_list_META[[dataset]][['Meta']] <- meta_filter[[dataset]]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Dataset:  balanced Lab:  lab_A Number of DE proteins:  2232\n",
+      "Dataset:  balanced Lab:  lab_B Number of DE proteins:  2232\n",
+      "Dataset:  balanced Lab:  lab_C Number of DE proteins:  2232\n",
+      "Dataset:  balanced Lab:  lab_D Number of DE proteins:  2232\n",
+      "Dataset:  balanced Lab:  lab_E Number of DE proteins:  2232\n",
+      "Dataset:  imbalanced Lab:  lab_A Number of DE proteins:  2234\n",
+      "Dataset:  imbalanced Lab:  lab_B Number of DE proteins:  2234\n",
+      "Dataset:  imbalanced Lab:  lab_C Number of DE proteins:  2234\n",
+      "Dataset:  imbalanced Lab:  lab_D Number of DE proteins:  2234\n",
+      "Dataset:  imbalanced Lab:  lab_E Number of DE proteins:  2234"
+     ]
+    }
+   ],
+   "source": [
+    "for(dataset in datasets_list){\n",
+    "  for (name in labs_list) {\n",
+    "    # reaed results\n",
+    "    de_results <- read_tsv(paste0('/home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/', dataset, '/', name, '_res_FULL.tsv'), show_col_types = FALSE)\n",
+    "    de_results <- de_results %>% filter(Protein %in% meta_filter[[dataset]]) %>%\n",
+    "      arrange(desc(Protein))\n",
+    "    cat('\\nDataset: ', dataset, 'Lab: ', name, 'Number of DE proteins: ', nrow(de_results))\n",
+    "    write.table(de_results, file = paste0('/home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/', dataset, '/', name, '_res.tsv'), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Central run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -64,10 +303,7 @@
       "Filtering by condition - two not-NA per condition\n",
       "\tBefore filtering: 3059 118 \n",
       "\tAfter filtering: 2862 118 \n",
-      "Filtering by center - two not-NA per center\n",
-      "\tBefore filtering: 2862 118 \n",
-      "\tAfter filtering: 2272 118 \n",
-      "Rows after all filters: 2272 \n",
+      "Rows after all filters: 2232 \n",
       "\n",
       "\n",
       "Dataset:  imbalanced \n",
@@ -76,10 +312,7 @@
       "Filtering by condition - two not-NA per condition\n",
       "\tBefore filtering: 3055 81 \n",
       "\tAfter filtering: 2796 81 \n",
-      "Filtering by center - two not-NA per center\n",
-      "\tBefore filtering: 2796 81 \n",
-      "\tAfter filtering: 2271 81 \n",
-      "Rows after all filters: 2271 \n"
+      "Rows after all filters: 2234 \n"
      ]
     }
    ],
@@ -121,6 +354,7 @@
     "  # save for RBE \n",
     "  # write.table(central_intensities, file = paste0('/home/yuliya/repos/other/removeBatch/evaluation_data/proteomics/before/', dataset, '_central_intensities.tsv'), sep = \"\\t\", quote = FALSE, row.names = TRUE)\n",
     "  # write.table(central_batch_info, file = paste0('/home/yuliya/repos/other/removeBatch/evaluation_data/proteomics/before/', dataset, '_central_batch_info.tsv'), sep = \"\\t\", quote = FALSE, row.names = FALSE) \n",
+    "  \n",
     "  central_counts <- central_counts %>% column_to_rownames('rowname')\n",
     "  central_intensities <- central_intensities[, central_batch_info$file]\n",
     "    \n",
@@ -129,11 +363,14 @@
     "\n",
     "  filter_list_META[[dataset]][['Central']] <- rownames(central_intensities)\n",
     "\n",
-    "  central_intensities <- filter_per_center(central_intensities, central_batch_info, \"file\",\n",
-    "    unique(central_batch_info$lab), 'lab')\n",
+    "  # central_intensities <- filter_per_center(central_intensities, central_batch_info, \"file\",\n",
+    "  #   unique(central_batch_info$lab), 'lab')\n",
+    "\n",
+    "  # use the same proteins as in meta-analysis\n",
+    "  central_intensities <- central_intensities[meta_filter[[dataset]],]\n",
     "  \n",
     "  cat(\"Rows after all filters:\", nrow(central_intensities), \"\\n\")\n",
-    "  analyzed_proteins[[dataset]] <- rownames(central_intensities)\n",
+    "  # analyzed_proteins[[dataset]] <- rownames(central_intensities)\n",
     "\n",
     "  central_intensities <- log2(central_intensities + 1)\n",
     "\n",
@@ -159,210 +396,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "analysed_proteins <- list()\n",
+    "\n",
+    "for(dataset in datasets_list){\n",
+    "    analysed_proteins[[dataset]] <- list()\n",
+    "    analysed_proteins[[dataset]]$central <- filter_list_META[[dataset]][['Central']]\n",
+    "    analysed_proteins[[dataset]]$meta <- filter_list_META[[dataset]][['Meta']]\n",
+    "}\n",
+    "\n",
+    "# write to json\n",
+    "write_json(analysed_proteins, \"/home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/analysed_proteins.json\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Separate run for meta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "Dataset:  balanced \n",
-      "\n",
-      "Lab:  lab_A \n",
-      "Rows after all filters: 2272 \n",
-      "\n",
-      "Lab:  lab_B \n",
-      "Rows after all filters: 2272 \n",
-      "\n",
-      "Lab:  lab_C \n",
-      "Rows after all filters: 2272 \n",
-      "\n",
-      "Lab:  lab_D \n",
-      "Rows after all filters: 2272 \n",
-      "\n",
-      "Lab:  lab_E \n",
-      "Rows after all filters: 2272 \n",
-      "\n",
-      "\n",
-      "Dataset:  imbalanced \n",
-      "\n",
-      "Lab:  lab_A \n",
-      "Rows after all filters: 2271 \n",
-      "\n",
-      "Lab:  lab_B \n",
-      "Rows after all filters: 2271 \n",
-      "\n",
-      "Lab:  lab_C \n",
-      "Rows after all filters: 2271 \n",
-      "\n",
-      "Lab:  lab_D \n",
-      "Rows after all filters: 2271 \n",
-      "\n",
-      "Lab:  lab_E \n",
-      "Rows after all filters: 2271 \n"
-     ]
-    }
-   ],
-   "source": [
-    "options(warn=-1)\n",
-    "datasets_list = c('balanced', 'imbalanced')\n",
-    "labs_list = c('lab_A', 'lab_B', 'lab_C', 'lab_D' , 'lab_E')\n",
-    "\n",
-    "# empty plot\n",
-    "x <- ggplot() + theme_minimal()\n",
-    "\n",
-    "for(dataset in datasets_list){\n",
-    "  plots_list = list()\n",
-    "  cat('\\n\\nDataset: ', dataset, \"\\n\")\n",
-    "\n",
-    "  path_to_reports = paste0('/home/yuliya/repos/cosybio/FedProt/data/bacterial_data/', dataset, '/')\n",
-    "  \n",
-    "  for (name in labs_list) {\n",
-    "    output_path = paste0('/home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/', dataset, '/')\n",
-    "    cat('\\nLab: ', name, \"\\n\")\n",
-    "\n",
-    "    batch_info = read_tsv(paste0(path_to_reports, name, '/metadata.tsv'), show_col_types = FALSE)\n",
-    "    intensities = read_tsv(paste0(path_to_reports, name, '/protein_groups_matrix.tsv'), show_col_types = FALSE)\n",
-    "    counts = read_tsv(paste0(path_to_reports, name, '/protein_counts.tsv'), show_col_types = FALSE)\n",
-    "\n",
-    "    intensities <- intensities %>% column_to_rownames('rowname')\n",
-    "    counts <- counts %>% column_to_rownames('rowname')\n",
-    "    intensities <- intensities[, batch_info$file]\n",
-    "    \n",
-    "    filter_list_META[[dataset]][[name]] <- rownames(intensities)\n",
-    "\n",
-    "    intensities <- intensities[analyzed_proteins[[dataset]],]\n",
-    "    cat(\"Rows after all filters:\", nrow(intensities), \"\\n\")\n",
-    "    intensities <- log2(intensities + 1)\n",
-    "\n",
-    "    # run DE\n",
-    "    design <- make_design(batch_info, 'condition')\n",
-    "    contrasts <- makeContrasts(Glu-Pyr, levels = colnames(design))\n",
-    "    de_results <- run_DE(intensities, counts, design, contrasts)\n",
-    "    de_results <- de_results %>% rownames_to_column('Protein')\n",
-    "    write.table(de_results, file = paste0(output_path, name, '_res_FULL.tsv'), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
-    "\n",
-    "\n",
-    "    # plot volcano plots\n",
-    "    if(name == 'lab_E'){\n",
-    "        plot_separate <- volcano_plot(\n",
-    "        de_results, paste(dataset, name, \", Glu/Pyr\"),\n",
-    "        pval_threshold = 0.01, logfc_threshold = 0.58,\n",
-    "        show_names = FALSE\n",
-    "      )\n",
-    "    } else {\n",
-    "      plot_separate <- volcano_plot(\n",
-    "        de_results, paste(dataset, name, \", Glu/Pyr\"),\n",
-    "        pval_threshold = 0.01, logfc_threshold = 0.58,\n",
-    "        show_names = FALSE, show_legend = FALSE\n",
-    "      )\n",
-    "    }\n",
-    "    plots_list[[name]] = plot_separate\n",
-    "  }\n",
-    "\n",
-    "  layout <- (plots_list[['lab_A']] | plots_list[['lab_B']] | plots_list[['lab_C']]) /\n",
-    "            (plots_list[['lab_D']] | plots_list[['lab_E']] | x)\n",
-    "  # save plot\n",
-    "  ggsave(file = paste0(output_path, \"volcano_plots.svg\"), plot = layout, width = 15, height = 8)\n",
-    "}\n",
-    "\n",
-    "\n",
-    "write_json(filter_list_META, \"/home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/filter_list_META.json\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "Dataset:  balanced\n",
-      "\tIntersection length: 2273\n",
-      "\n",
-      "Dataset:  imbalanced\n",
-      "\tIntersection length: 2273"
-     ]
-    }
-   ],
-   "source": [
-    "meta_filter <- list()\n",
-    "\n",
-    "\n",
-    "# prepare filter for meta-analyses\n",
-    "for(dataset in datasets_list){\n",
-    "  cat('\\n\\nDataset: ', dataset)\n",
-    "  for (name in labs_list) {\n",
-    "    if(is.null(meta_filter[[dataset]])){\n",
-    "      meta_filter[[dataset]] <- filter_list_META[[dataset]][[name]]\n",
-    "    } else {\n",
-    "      meta_filter[[dataset]] <- intersect(meta_filter[[dataset]], filter_list_META[[dataset]][[name]])\n",
-    "    }\n",
-    "  }\n",
-    "  cat(\"\\n\\tIntersection length:\",  length(meta_filter[[dataset]]))\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Dataset:  balanced Lab:  lab_A Number of DE proteins:  2272\n",
-      "Dataset:  balanced Lab:  lab_B Number of DE proteins:  2272\n",
-      "Dataset:  balanced Lab:  lab_C Number of DE proteins:  2272\n",
-      "Dataset:  balanced Lab:  lab_D Number of DE proteins:  2272\n",
-      "Dataset:  balanced Lab:  lab_E Number of DE proteins:  2272\n",
-      "Dataset:  imbalanced Lab:  lab_A Number of DE proteins:  2271\n",
-      "Dataset:  imbalanced Lab:  lab_B Number of DE proteins:  2271\n",
-      "Dataset:  imbalanced Lab:  lab_C Number of DE proteins:  2271\n",
-      "Dataset:  imbalanced Lab:  lab_D Number of DE proteins:  2271\n",
-      "Dataset:  imbalanced Lab:  lab_E Number of DE proteins:  2271"
-     ]
-    }
-   ],
-   "source": [
-    "for(dataset in datasets_list){\n",
-    "  for (name in labs_list) {\n",
-    "    # reaed results\n",
-    "    de_results <- read_tsv(paste0('/home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/', dataset, '/', name, '_res_FULL.tsv'), show_col_types = FALSE)\n",
-    "    de_results <- de_results %>% filter(Protein %in% meta_filter[[dataset]]) %>%\n",
-    "      arrange(desc(Protein))\n",
-    "    cat('\\nDataset: ', dataset, 'Lab: ', name, 'Number of DE proteins: ', nrow(de_results))\n",
-    "    write.table(de_results, file = paste0('/home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/', dataset, '/', name, '_res.tsv'), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
-    "    }\n",
-    "}"
+    "# Meta run"
    ]
   },
   {
