added evaluation on imbalanced

--- a/evaluation/bacterial/01_run_deqms.ipynb
+++ b/evaluation/bacterial/01_run_deqms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -38,14 +38,14 @@
    },
    "outputs": [],
    "source": [
-    "filter_list_META = list(\"balanced\" = list(), \"imbalanced\" = list())\n",
+    "filter_list_META = list(\"balanced\" = list(), \"imbalanced\" = list(), \"downsampled\" = list())\n",
     "\n",
     "analyzed_proteins <- list()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -95,39 +95,72 @@
       "\n",
       "Lab:  lab_A \n",
       "Filtering by condition - two not-NA per condition\n",
-      "\tBefore filtering: 2549 15 \n",
-      "\tAfter filtering: 2520 15 \n",
-      "Rows after all filters: 2520 \n",
+      "\tBefore filtering: 2547 8 \n",
+      "\tAfter filtering: 2512 8 \n",
+      "Rows after all filters: 2512 \n",
       "\n",
       "Lab:  lab_B \n",
       "Filtering by condition - two not-NA per condition\n",
-      "\tBefore filtering: 2845 13 \n",
-      "\tAfter filtering: 2822 13 \n",
+      "\tBefore filtering: 2845 14 \n",
+      "\tAfter filtering: 2822 14 \n",
       "Rows after all filters: 2822 \n",
       "\n",
       "Lab:  lab_C \n",
       "Filtering by condition - two not-NA per condition\n",
-      "\tBefore filtering: 2814 14 \n",
-      "\tAfter filtering: 2745 14 \n",
-      "Rows after all filters: 2745 \n",
+      "\tBefore filtering: 2815 17 \n",
+      "\tAfter filtering: 2742 17 \n",
+      "Rows after all filters: 2742 \n",
       "\n",
       "Lab:  lab_D \n",
       "Filtering by condition - two not-NA per condition\n",
-      "\tBefore filtering: 2813 15 \n",
-      "\tAfter filtering: 2785 15 \n",
-      "Rows after all filters: 2785 \n",
+      "\tBefore filtering: 2813 7 \n",
+      "\tAfter filtering: 2784 7 \n",
+      "Rows after all filters: 2784 \n",
       "\n",
       "Lab:  lab_E \n",
       "Filtering by condition - two not-NA per condition\n",
       "\tBefore filtering: 2401 24 \n",
       "\tAfter filtering: 2354 24 \n",
+      "Rows after all filters: 2354 \n",
+      "\n",
+      "\n",
+      "Dataset:  downsampled \n",
+      "\n",
+      "Lab:  lab_A \n",
+      "Filtering by condition - two not-NA per condition\n",
+      "\tBefore filtering: 2548 14 \n",
+      "\tAfter filtering: 2510 14 \n",
+      "Rows after all filters: 2510 \n",
+      "\n",
+      "Lab:  lab_B \n",
+      "Filtering by condition - two not-NA per condition\n",
+      "\tBefore filtering: 2845 14 \n",
+      "\tAfter filtering: 2819 14 \n",
+      "Rows after all filters: 2819 \n",
+      "\n",
+      "Lab:  lab_C \n",
+      "Filtering by condition - two not-NA per condition\n",
+      "\tBefore filtering: 2820 14 \n",
+      "\tAfter filtering: 2747 14 \n",
+      "Rows after all filters: 2747 \n",
+      "\n",
+      "Lab:  lab_D \n",
+      "Filtering by condition - two not-NA per condition\n",
+      "\tBefore filtering: 2813 14 \n",
+      "\tAfter filtering: 2776 14 \n",
+      "Rows after all filters: 2776 \n",
+      "\n",
+      "Lab:  lab_E \n",
+      "Filtering by condition - two not-NA per condition\n",
+      "\tBefore filtering: 2400 14 \n",
+      "\tAfter filtering: 2354 14 \n",
       "Rows after all filters: 2354 \n"
      ]
     }
    ],
    "source": [
     "options(warn=-1)\n",
-    "datasets_list = c('balanced', 'imbalanced')\n",
+    "datasets_list = c('balanced', 'imbalanced', \"downsampled\") \n",
     "labs_list = c('lab_A', 'lab_B', 'lab_C', 'lab_D' , 'lab_E')\n",
     "\n",
     "# empty plot\n",
@@ -196,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -213,7 +246,10 @@
       "\tIntersection length: 2232\n",
       "\n",
       "Dataset:  imbalanced\n",
-      "\tIntersection length: 2234"
+      "\tIntersection length: 2234\n",
+      "\n",
+      "Dataset:  downsampled\n",
+      "\tIntersection length: 2232"
      ]
     }
    ],
@@ -237,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -258,7 +294,12 @@
       "Dataset:  imbalanced Lab:  lab_B Number of DE proteins:  2234\n",
       "Dataset:  imbalanced Lab:  lab_C Number of DE proteins:  2234\n",
       "Dataset:  imbalanced Lab:  lab_D Number of DE proteins:  2234\n",
-      "Dataset:  imbalanced Lab:  lab_E Number of DE proteins:  2234"
+      "Dataset:  imbalanced Lab:  lab_E Number of DE proteins:  2234\n",
+      "Dataset:  downsampled Lab:  lab_A Number of DE proteins:  2232\n",
+      "Dataset:  downsampled Lab:  lab_B Number of DE proteins:  2232\n",
+      "Dataset:  downsampled Lab:  lab_C Number of DE proteins:  2232\n",
+      "Dataset:  downsampled Lab:  lab_D Number of DE proteins:  2232\n",
+      "Dataset:  downsampled Lab:  lab_E Number of DE proteins:  2232"
      ]
     }
    ],
@@ -284,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -308,24 +349,32 @@
       "\n",
       "Dataset:  imbalanced \n",
       "\tNumber of proteins:  3055 \n",
-      "\tNumber of samples:  81 \n",
+      "\tNumber of samples:  70 \n",
       "Filtering by condition - two not-NA per condition\n",
-      "\tBefore filtering: 3055 81 \n",
-      "\tAfter filtering: 2796 81 \n",
-      "Rows after all filters: 2234 \n"
+      "\tBefore filtering: 3055 70 \n",
+      "\tAfter filtering: 2819 70 \n",
+      "Rows after all filters: 2234 \n",
+      "\n",
+      "\n",
+      "Dataset:  downsampled \n",
+      "\tNumber of proteins:  3059 \n",
+      "\tNumber of samples:  70 \n",
+      "Filtering by condition - two not-NA per condition\n",
+      "\tBefore filtering: 3059 70 \n",
+      "\tAfter filtering: 2913 70 \n",
+      "Rows after all filters: 2232 \n"
      ]
     }
    ],
    "source": [
-    "datasets_list = c('balanced', 'imbalanced')\n",
+    "datasets_list = c('balanced', 'imbalanced', \"downsampled\")\n",
     "labs_list = c('lab_A', 'lab_B', 'lab_C', 'lab_D' , 'lab_E')\n",
     "\n",
     "\n",
     "for(dataset in datasets_list){\n",
     "\n",
     "  path_to_reports = paste0('/home/yuliya/repos/cosybio/FedProt/data/bacterial_data/', dataset, '/')\n",
-    "  \n",
-    " \n",
+    "\n",
     "  central_intensities = NULL\n",
     "  central_counts = NULL\n",
     "  central_batch_info = read_tsv(paste0(path_to_reports, 'bath_info_all.tsv'), show_col_types = FALSE)\n",
@@ -397,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -433,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -452,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -471,14 +520,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# cd /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/downsampled/\n",
+    "\n",
+    "# Rscript /home/yuliya/repos/cosybio/FedProt/evaluation_utils/meta_code/run_MetaDE.R /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/downsampled/ lab_A lab_B lab_C lab_D lab_E\n",
+    "# Rscript /home/yuliya/repos/cosybio/FedProt/evaluation_utils/meta_code/run_MetaVolcanoR.R /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/downsampled/ lab_A lab_B lab_C lab_D lab_E\n",
+    "# Rscript /home/yuliya/repos/cosybio/FedProt/evaluation_utils/meta_code/run_RankProd.R /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/downsampled/ lab_A lab_B lab_C lab_D lab_E\n",
+    "\n",
+    "# cp /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/downsampled/MA_* /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/downsampled/results/"
+   ]
   },
   {
    "cell_type": "code",
